<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/mathPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/mathpic_foreground" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/select_difficulty"
        app:layout_constraintEnd_toStartOf="@+id/operationText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathPic" />

    <TextView
        android:id="@+id/operationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/select_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/difficultyText"
        app:layout_constraintTop_toBottomOf="@+id/mathPic" />


    <RadioGroup
        android:id="@+id/difficultyButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/operationButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyText">

        <RadioButton
            android:id="@+id/easyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Easy" />

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium"
            tools:layout_editor_absoluteX="65dp" />

        <RadioButton
            android:id="@+id/hardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hard"
            tools:layout_editor_absoluteX="65dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/operationButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/difficultyButtons"
        app:layout_constraintTop_toBottomOf="@+id/operationText">

        <RadioButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Addition" />

        <RadioButton
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Multiplication" />

        <RadioButton
            android:id="@+id/subtractButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subtraction"
            tools:layout_editor_absoluteX="65dp" />

        <RadioButton
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            tools:layout_editor_absoluteX="65dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/questionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_of_questions"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationButtons" />

    <Button
        android:id="@+id/questionMinus"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minus"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/questionCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionsText" />


    <TextView
        android:id="@+id/questionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="10"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionsText" />

    <Button
        android:id="@+id/questionPlus"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/questionCount"
        app:layout_constraintTop_toBottomOf="@+id/questionsText" />

    <Button
        android:id="@+id/startButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:theme="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionPlus"/>


</androidx.constraintlayout.widget.ConstraintLayout>